tailwind boundaries fixed, homepage var. 1 https://github.com/maxlshk/DBWebApp

--- a/.gitignore
+++ b/.gitignore
@@ -121,5 +121,5 @@ node_modules/
 npm-debug.log
 package-lock.json
 
-# TailwindCSS build output (if you don't want your build in VCS)
+# TailwindCSS build output 
 app/static/dist/
