--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "tailwindcss -i ./static/styles.css -o ./static/dist/styles.css"
+    "build-css": "tailwindcss -i app/static/css/styles.css -o app/static/css/dist/styles.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
+    "flowbite": "^2.3.0",
+    "postcss": "^8.4.35"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.4.1"
   }
 }
