--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
     "flowbite": "^2.3.0",
+    "flowbite-datepicker": "^1.2.6",
     "postcss": "^8.4.35"
   },
   "devDependencies": {
